--- a/public/www/choi/css/index.css
+++ b/public/www/choi/css/index.css
@@ -36,5 +36,15 @@
     font-size: 1.7rem;
     font-weight: 500;
     color: #999;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+}
+.sns_list {
+    list-style: none;
+    display: flex;
+    gap: 3rem;
+    justify-content: center;
+    align-items: center;
+}
+.sns_list > li {
+    cursor: pointer;
 }
