--- a/public/www/choi/css/common.css
+++ b/public/www/choi/css/common.css
@@ -51,6 +51,20 @@ select::placeholder {
 input[type="radio"] {
     display: none;
 }
+input[type='date']::before {
+    content: '생년월일';
+    width: 50%;
+    color: #ccc;
+    background: #fff;
+    position: absolute;
+    top: 50%;
+    left: 1.5rem;
+    transform: translateY(-50%);
+}
+input[type='date']:focus::before,
+input[type='date']:valid::before {
+  display: none;
+}
 input[type="text"],
 input[type="password"],
 input[type="email"],
