--- a/public/www/choi/css/dashboard.css
+++ b/public/www/choi/css/dashboard.css
@@ -22,7 +22,7 @@
 #dashboard > * {
 	position: relative;
 }
-#dashboard > .title02:first-of-type {
+#dashboard > .title01:first-of-type {
 	color: #fff;
 	line-height: 1.3;
 	word-break: keep-all;
@@ -35,7 +35,7 @@
 	background: var(--primary-color);
 	border-radius: 50%;
 	position: absolute;
-	top: -250px;
+	top: -160px;
 	left: 50%;
 	transform: translateX(-50%);
 	z-index: 0;
@@ -90,10 +90,7 @@
 	line-height: 1;
 }
 #lastWeekCompare {
-	margin: 5rem -5rem 0;
-}
-#lastWeekCompare .txt03_bold {
-	text-align: center;
+	margin-top: 5rem;
 }
 #lastWeekCompare .chart_list > li {
 	display: flex;
@@ -137,6 +134,19 @@
 }
 #myGoal {
 	margin: 5rem auto 0;
+	position: relative;
+}
+#myGoal .btn_add {
+	position: absolute;
+	top: 2rem;
+	right: 2rem;
+	width: 3rem;
+	height: 3rem;
+}
+#myGoal .btn_add img {
+	display: block;
+	width: 50%;
+	height: auto;
 }
 
 @media screen and (max-width: 400px){
@@ -163,4 +173,43 @@
 	#lastWeekAverage .average_list .txt_box .txt02_bold {
 		width: auto;
 	}
+}
+
+/* 목표 설정 모달 */
+#modal_bg {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background: rgba(0,0,0,0.5);
+	z-index: 9;
+	display: none;
+}
+#goalModal {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 10;
+	width: 75%;
+	min-width: 240px;
+	display: none;
+}
+#goalModal .btn_close {
+	position: absolute;
+	top: 2rem;
+	right: 2rem;
+	padding: 1rem;
+	background: var(--primary-color);
+	border-radius: 50%;
+	width: 3rem;
+	height: 3rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	font-weight: bold;
+	line-height: 1;
+	cursor: pointer;
 }
